complete revision before correction, need to implement better comments for explaining. Some todos are kept in order to decide for any modification but all core functionality is already implemented
